[gd_scene load_steps=10 format=3 uid="uid://dovwvwmd44yof"]

[ext_resource type="Script" path="res://scenes/first_level/level_1.gd" id="1_fkmyj"]
[ext_resource type="AudioStream" uid="uid://dmbgtuidufmxj" path="res://scenes/first_level/spawn_effect.mp3" id="4_pdow5"]
[ext_resource type="PackedScene" uid="uid://cwvcbb4gc6cth" path="res://map_elements/tree/tree.tscn" id="4_qwoip"]
[ext_resource type="PackedScene" uid="uid://d3a21bybx6os5" path="res://helpers/camera/camera_limiter.tscn" id="5_pt4lf"]
[ext_resource type="AudioStream" uid="uid://obexwgmx5cqt" path="res://assets/audio/slime-dieded.mp3" id="6_06b38"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_leic3"]
size = Vector2(20.4986, 870.577)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ihcjb"]
size = Vector2(1206.59, 20.4695)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s1ak0"]
size = Vector2(131, 2883)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uhd48"]
size = Vector2(4777, 114)

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_fkmyj")

[node name="CameraLimiter" parent="." instance=ExtResource("5_pt4lf")]
unique_name_in_owner = true
offset_right = 3000.0
offset_bottom = 1500.0
scale = Vector2(1.59024, 1.84031)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -30

[node name="BackgroundTexture" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
offset_right = 4894.0
offset_bottom = 2823.0
scale = Vector2(0.976436, 0.979252)
color = Color(0.188235, 0.411765, 0, 1)

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="SlimeDeath" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
position = Vector2(866, 603)
stream = ExtResource("6_06b38")
pitch_scale = 1.88

[node name="Tree" parent="." instance=ExtResource("4_qwoip")]
position = Vector2(872, 518)

[node name="Tree" parent="Tree" instance=ExtResource("4_qwoip")]
position = Vector2(244.545, 290.909)

[node name="SpawnPoint" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(1096, 505)

[node name="SpawnEffect" type="AudioStreamPlayer2D" parent="SpawnPoint"]
unique_name_in_owner = true
position = Vector2(-864, -242)
stream = ExtResource("4_pdow5")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-54, 1416.5)
scale = Vector2(5.26866, 3.36903)
shape = SubResource("RectangleShape2D_leic3")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(2414.49, -25)
scale = Vector2(4.00221, 2.44266)
shape = SubResource("RectangleShape2D_ihcjb")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(4843.5, 1441.5)
shape = SubResource("RectangleShape2D_s1ak0")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(2388.5, 2821)
shape = SubResource("RectangleShape2D_uhd48")

[node name="PortalImage" type="Sprite2D" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="SpawnPoint/SpawnEffect" to="." method="_on_spawn_effect_finished"]
